# py2graph

./: LICENSE  README.md  pyproject.toml  requirements.txt
example/: productworld.puml
live-viewer/: app.puml  index.html  main.py  start_plantuml_docker.sh
py2graph/: __main__.py  cli.py  py2graph.py
py2graph/domain/: umlclass.py  umlenum.py  umlfunction.py  umlrelation.py
py2graph/graphcreator/: graphcreator.py  simplenode.py
py2graph/graphviewer/: matplotlib.py  puml.py
py2graph/parser/: attribute.py  classparser.py  constructor.py  helper.py  method.py  methodbody.py  moduleparser.py  package.py  parser_interface.py
tests/py2graph/: test_integration.py
tests/py2graph/graphcreator/: test_graphcreator.py  test_nodes.py
tests/py2graph/graphviewer/: test_matplotlib.py  test_puml.py
tests/py2graph/parser/: test_attribute.py  test_class.py  test_constructor.py  test_helper.py  test_method.py  test_methodbody.py  test_module.py  test_package.py
