[tool.poetry]
name = "py2graph"
version = "0.1.0"
description = "Generate PlantUML class diagrams to document your Python application, based on a graph representation"
keywords = ["class diagram", "PlantUML", "documentation", "inspection", "AST", "graph"]
readme = "README.md"
repository = "https://github.com/doling/py2graph"
authors = ["Dominik Lindner"]
maintainers = ["Dominik Lindner"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"



